# AetherLink

./: .env.example  .env.template  .gitignore  LICENSE  README.md  aetherlink-webapp.service  analyze-ucs-data.py  fetch-all-satellites.py  ingest-ucs-data.py  main.py  plan.md  pyproject.toml  read-spacetrack-docs.js  restart-webapp.sh  start-webapp.sh  stop-webapp.sh  test-dashboard-issues.html  test-spacetrack-auth.js  test-tle-vs-satcat.js  test-working-query.js
back_end/hardware/: readme.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMU_API.md  IMU_AXIS_MAPPING.md  IMU_FIX_SUMMARY.md  MOTOR_SYSTEM_DOCUMENTATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SUDOERS_SETUP.md  SWAGGER_ACCESS.md  TRACKING_CONTROLLER_DESIGN.md  TROUBLESHOOTING.md  UCS-Satellite-Database 5-1-2023.xlsx  UCS-Satellite-Database-Officialname 5-1-2023.xlsx  V1.0.6_COMMAND_COVERAGE.md  WEBAPP_STARTUP_GUIDE.md  WT901C_COMPLETE_GUIDE.md  WT901C_ENHANCEMENTS.md  architecture.md
docs/examples/: MKS_form1_analysis.cs
examples/: sample_satellite.json
front_end/: notes.md  readme.md
satcat-backend/: .env.example  .gitignore  QUICK_START.md  README.md  SETUP_POSTGRESQL.md  SPACETRACK_RESPONSE_EMAIL.md  fix-permissions.sql  init-db.sh  package-lock.json  package.json  transfer-ownership.sql  tsconfig.json
scripts/: aetherlink-sudoers  install-sudoers.sh  install.sh  start-backend.sh  start-frontend.sh  start-servo-api.sh  start-webapp.sh  start.sh  stop-webapp.sh  test_motors.py
webapp/: Dockerfile  README.md  aetherlink.service  docker-compose.yml  install.sh  rebuild.sh
(+172 files in other folders)
