[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherlink"
version = "0.1.0"
description = "AetherLink back_end + tools for SATCOM antenna project"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "JDO" }]
license = { text = "MIT" }
dependencies = [
  "pyserial>=3.5",
  # add others if you use them:
  # "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "types-requests",
]

[project.scripts]
# CLI entry points (callable after install)
aether-tree = "tools.tree_snapshot:main"
aether-serials = "tools.diagnostics.list_serial:main"
aether-servo-probe = "tools.diagnostics.servo_probe:main"

[tool.setuptools]
# auto-discover packages
packages = { find = { include = ["hardware", "hardware.*", "tools", "tools.*"] } }
include-package-data = true

[tool.setuptools.package-data]
# ensure your JSON config ships with the package
"tools.config" = ["ports.json"]

[tool.setuptools.data-files]
# (optional) install a copy of your tree script at top-level bin if needed later
# this section is not required since we expose it via entry point above

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"
